# marketing_agent_gemini_enterprise

./: .env.example  .gitignore  Makefile  pyproject.toml
.adk/: session.db
a2a_sample_agent/: __main__.py  agent_executor.py  test_client.py
marketing_agent/: agent.py  prompt.py
marketing_agent/.adk/: session.db
marketing_agent/remote_a2a/root_agent/: __init__.py  agent.py
marketing_agent/sub_agents/logo_create/: agent.py
marketing_agent/sub_agents/marketing_create/: agent.py
marketing_agent/sub_agents/scanning_trend_create/: __init__.py  agent.py  prompt.py
marketing_agent/sub_agents/website_create/: agent.py
marketing_agent/sub_agents/youtube_analyser/: __init__.py  agent.py  prompt.py
marketing_agent/tools/: bigquery_tools.py  youtube_tools.py
test/test_consume_a2a/: __init__.py  test_a2a_root_agent.py
