[project]
name = "marketing-agent-gemini-enterprise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]>=0.3.0",
    "google-adk>=2.3.0",
    "google-api-python-client>=2.108.0",
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-dataplex>=1.0.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
